--- a/MachineLearning_Task3.csproj
+++ b/MachineLearning_Task3.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AffinityPropagation.cs" />
+    <Compile Include="FileWorker.cs" />
+    <Compile Include="Prediction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
